crates/toml_edit/tests/snapshots/invalid/key/duplicate-keys-09.stderr
TOML parse error at line 2, column 1
  |
2 | tbl = {kk=2}
  | ^^^
duplicate key
